full-moon/tests/cases/fail/parser/local-function-7/source.lua
local function foo(x, y,)
	print(x, y)
end
